# ChangeLog for app-admin/gkrellm
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/gkrellm/ChangeLog,v 1.39 2003/04/28 21:53:33 mholzer Exp $

*gkrellm-2.1.10 (28 Apr 2003)

  28 Apr 2003; Martin Holzer <mholzer@gentoo.org> gkrellm-2.1.10.ebuild,
  gkrellm-2.1.9.ebuild:
  Version bumped. Closes #20058.
  Marked as stable.

*gkrellm-2.1.9 (06 Apr 2003)

  06 Apr 2003; Seemant Kulleen <seemant@gentoo.org> gkrellm-2.1.9.ebuild:
  version bump, thanks to: Jordan <lx_xero@zapo.net> for reminding me in bug
  #18877

*gkrellm-2.1.8a (15 Mar 2003)

  15 Mar 2003; Seemant Kulleen <seemant@gentoo.org> gkrellm-2.1.8a.ebuild:
  version bump thanks to: Jordan <lx_xero@zapo.net> in bug #17589

*gkrellm-2.1.7a (17 Feb 2003)

  12 Mar 2003; Jason Wever <weeve@gentoo.org> gkrellm-2.1.7a.ebuild:
  Added sparc to keywords.

  23 Feb 2003; Seemant Kulleen <seemant@gentoo.org> gkrellm-2.1.7a.ebuild :
  fixed non-gtk installs closes bug #16051 by Richard M. Ferko <rmferko@columbus.rr.com>

  19 Feb 2003; Martin Holzer <mholzer@gentoo.org> gkrellm-2.1.7a.ebuild :
  Marked as stable.

  18 Feb 2003;  <root@gentoo.org> gkrellm-2.1.7a.ebuild :
  miskeyed for alpha -- fixed

  18 Feb 2003;  <root@gentoo.org> gkrellm-2.1.7a.ebuild :
  oops -- gkrellm2 binary now installed. Thanks to floam <floam@ascorbic.com> in bug #15874

  17 Feb 2003;  <root@gentoo.org> gkrellm-2.1.7a.ebuild files/digest-gkrellm-2.1.7a :
  version bump

*gkrellm-2.1.5 (17 Jan 2003)

  22 Feb 2003; Mark Guertin <gerk@gentoo.org> gkrellm-2.1.5.ebuild :
  set ppc in keywords

  13 Feb 2003;  <root@gentoo.org> gkrellm-2.1.0.ebuild gkrellm-2.1.5.ebuild :
  themes directory correction thanks to charlton in #gentoo

  17 Jan 2003; Seemant Kulleen <seemant@gentoo.org> gkrellm-2.1.5.ebuild
  files/digest-gkrellm-2.1.5 :

  Version bump which fixes bugs in 2.1.4, specifically with multiple instances