@@ -1,9 +1,9 @@
-MD5 5b4938e155beed3df070eeae65bd2ecc ChangeLog 6536
+MD5 0052c923f38d9b6374d2dd43f3bfffe9 ChangeLog 6631
 MD5 09e02ffeb4992e1da5ee1889f9251ba5 gkrellm-1.2.13.ebuild 916
 MD5 ff2b2fbf3ac1eccc12c6f438faddd3cf gkrellm-2.1.7a.ebuild 1499
 MD5 a070a5ef4cce62fc2c7c8e7d84e677a5 gkrellm-2.1.8a.ebuild 1536
 MD5 2d5491d43dc5e911529840b92add70fd gkrellm-2.1.9.ebuild 1534
-MD5 3e2b7685cd5d4f38deb205d2f25f0ba1 gkrellm-2.1.10.ebuild 1537
+MD5 6962a7549293f7336b51e6e4d8588aa0 gkrellm-2.1.10.ebuild 1492
 MD5 6e41c75396a6b0df361a04657fd45ac3 files/digest-gkrellm-1.2.13 67
 MD5 b51cb64490c79e47e8beb8d44fa93ca1 files/digest-gkrellm-2.1.9 66
 MD5 9a29ffc2927a47368d295f2c5e84945b files/digest-gkrellm-2.1.7a 67
